<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent"

        >

        <include layout="@layout/app_bar_onboarding"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInWith"
            android:layout_gravity="center"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/face_logo_inactived"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_plus_logo_active"
                android:layout_marginHorizontal="16dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/linkedin_logo_inactived"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orUseYourEmail"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/emailLabel"
                />
            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:backgroundTint="#E9F1E7"
                android:background="#E9F1E7"
                android:paddingVertical="16dp"
                android:paddingHorizontal="8dp"
                android:textColorHint="@color/grey"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/passwordLabel"
                android:layout_marginTop="16dp"
                />
            <EditText
                android:id="@+id/etSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:backgroundTint="#E9F1E7"
                android:background="#E9F1E7"
                android:paddingVertical="16dp"
                android:paddingHorizontal="8dp"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/signInButtonLabel"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/transparent"
                android:outlineProvider="background"
                android:outlineSpotShadowColor="@color/transparent"
                android:shadowColor="@color/transparent"
                android:text="@string/signUpButtonLabel"
                android:textColor="@color/primary"
                android:textSize="12dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgetMyPassword"
                android:textSize="8dp"
                android:textColor="@color/primary"
                android:backgroundTint="@color/transparent"
                android:shadowColor="@color/transparent"
                android:outlineSpotShadowColor="@color/transparent"
                android:lineHeight="1dp"
                android:outlineProvider="background"
                />

        </LinearLayout>








    </LinearLayout>

</RelativeLayout>