<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <include layout="@layout/app_bar_receita" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textColor="@color/primary"
            android:textSize ="20sp"
            android:layout_marginStart="1dp"
            />
        <EditText
            android:id="@+id/titulo"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E9F1E7"
            android:background="@drawable/input_shape"
            android:paddingVertical="16dp"
            android:paddingHorizontal="7dp"
            android:textColorHint="@color/grey"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="1dp"
            />
        <EditText
            android:id="@+id/descricao"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E9F1E7"
            android:background="@drawable/input_shape"
            android:paddingVertical="16dp"
            android:paddingHorizontal="2dp"
            android:textColorHint="@color/grey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="1dp"
            />
        <EditText
            android:id="@+id/categoria"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E9F1E7"
            android:background="@drawable/input_shape"
            android:paddingVertical="16dp"
            android:paddingHorizontal="2dp"
            android:textColorHint="@color/grey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="1dp"
            />
        <EditText
            android:id="@+id/valor"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E9F1E7"
            android:background="@drawable/input_shape"
            android:paddingVertical="16dp"
            android:paddingHorizontal="2dp"
            android:textColorHint="@color/grey"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_receita"
            android:textSize="12dp"
            android:backgroundTint="@color/primary"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:textColor="@color/primary"
            android:textSize="12dp"
            android:backgroundTint="@color/white"
            />




    </LinearLayout>


</LinearLayout>